// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`correct value should be verified 1`] = `
[
  {
    "id": "YES_NO",
    "kind": "yes_no",
    "properties": {
      "choices": [
        {
          "id": "id_yes",
          "label": "Yes",
        },
        {
          "id": "id_no",
          "label": "No",
        },
      ],
    },
    "title": "yes-no.test",
    "value": "id_yes",
  },
]
`;

exports[`undefined value should be verified if not required 1`] = `
[
  {
    "id": "YES_NO",
    "kind": "yes_no",
    "properties": {
      "choices": [
        {
          "id": "id_yes",
          "label": "Yes",
        },
        {
          "id": "id_no",
          "label": "No",
        },
      ],
    },
    "title": "yes-no.test",
    "value": "",
  },
]
`;
